--- a/public/test.html
+++ b/public/test.html
@@ -1,15 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Chatbot Test</title>
+  <title>AI Chatbot</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+    }
+    .chatbox {
+      width: 350px;
+      height: 500px;
+      background: #fff;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      display: flex;
+      flex-direction: column;
+    }
+    .messages {
+      flex: 1;
+      padding: 10px;
+      overflow-y: auto;
+    }
+    .user {
+      text-align: right;
+      margin: 5px 0;
+      color: #333;
+    }
+    .bot {
+      text-align: left;
+      margin: 5px 0;
+      color: #007bff;
+    }
+    .input-area {
+      display: flex;
+      border-top: 1px solid #ddd;
+    }
+    input {
+      flex: 1;
+      padding: 10px;
+      border: none;
+      outline: none;
+    }
+    button {
+      padding: 10px 15px;
+      border: none;
+      background: #007bff;
+      color: #fff;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
 
-<h2>Chatbot Test Page</h2>
-<p>Bottom right chatbot should appear 👇</p>
+<div class="chatbox">
+  <div id="messages" class="messages"></div>
 
-<script src="./chatbot.js"></script>
+  <div class="input-area">
+    <input id="messageInput" type="text" placeholder="Type your message..." />
+    <button onclick="sendMessage()">Send</button>
+  </div>
+</div>
+
+<script>
+  const messagesDiv = document.getElementById("messages");
+  const input = document.getElementById("messageInput");
+  const chatHistory = [];
+
+  function addMessage(text, sender) {
+    const div = document.createElement("div");
+    div.className = sender;
+    div.innerText = text;
+    messagesDiv.appendChild(div);
+    messagesDiv.scrollTop = messagesDiv.scrollHeight;
+  }
+
+  async function sendMessage() {
+    const message = input.value.trim();
+
+    if (!message) return;
+
+    addMessage(message, "user");
+    chatHistory.push({ role: "user", content: message });
+    input.value = "";
+
+    const response = await fetch("/chat", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        message: message,          // 🔥 THIS WAS MISSING
+        history: chatHistory
+      })
+    });
+
+    const data = await response.json();
+
+    addMessage(data.reply, "bot");
+    chatHistory.push({ role: "assistant", content: data.reply });
+  }
+</script>
 
 </body>
 </html>
