Fix duplicate chatbot UI

--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,12 @@
 </head>
 <body>
 
-<div class="chat-container">
-  <div class="chat-header">AI Business Assistant</div>
+  <!-- 
+    IMPORTANT:
+    ❌ Yahan koi chatbot HTML nahi hona chahiye
+    ✅ Chatbot JS dynamically inject karega UI
+  -->
 
-  <div id="chat-box"></div>
-
-  <div class="chat-input">
-    <input id="userInput" type="text" placeholder="Type your message..." />
-    <button onclick="sendMessage()">Send</button>
-  </div>
-</div>
-
-<script src="chatbot.js"></script>
+  <script src="chatbot.js"></script>
 </body>
 </html>
